manifests/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    kubernetes.io/metadata.name: observability
